# demes-python

./: .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CITATION.md  LICENSE  README  README.md  codecov.yml  environment.yml  mypy.ini  pyproject.toml  requirements.txt  requirements_CI.txt  requirements_docs_CI.txt  requirements_lint_CI.txt  requirements_minimal_CI.txt  requirements_tests_CI.txt  setup.cfg  setup.py  verification.py
.github/: dependabot.yml  mergify.yml
.github/workflows/: binder-badge.yaml  continuous-integration.yml  dev.yaml  dev.yml  docs.yaml  docs.yml  lint.yaml  lint.yml  tests.yaml  tests.yml  wheel.yaml
demes/: __init__.py  __main__.py  demes.py  examples.py  hypothesis_strategies.py  load_dump.py  models.py  ms.py  schema.py  script.py
demes/convert/: README  __init__.py  demes_.py  moments_.py  msprime_.py  stdpopsim_.py
docs/: Makefile  _config.yml  _toc.yml  api.md  api.rst  build.sh  cli.md  conf.py  convert.rst  convert_changelog.py  development.md  development.rst  examples.rst  gallery.rst  index.md  index.rst  installation.md  installation.rst  introduction.md  introduction.rst  quickstart.md  quickstart.rst  release.md  release.rst  schema.rst  tutorial.rst
docs/tutorial_examples/: browning_america.yml  isolation_with_migration.yml  minimal.yml  one_pop_epochs.yml  two_epoch.yaml
examples/: bottleneck.yml  browning_america.yaml  browning_america.yml  cloning_example.yaml  cloning_example.yml  gutenkunst_ooa.yml  jacobs_papuans.yaml  jacobs_papuans.yml  linear_growth.yml  offshoots.yaml  offshoots.yml  roundtrips.py  selfing_example.yaml  selfing_example.yml  two_epoch.yaml  two_epoch.yml  zigzag.yaml  zigzag.yml
paper/: Makefile  paper.bib  paper.tex
requirements/: delete-me.txt  docs.txt  lint.txt  minimal.txt  tests.txt
schema/: graph.json
tests/: __init__.py  conftest.py  ms_asymmetric_migration.sh  test_cli.py  test_convert.py  test_demes.py  test_examples.py  test_import_visibility.py  test_incremental_build.py  test_load_dump.py  test_moments.py  test_ms.py  test_spec.py  test_yaml.py
