[metadata]
name = demes
author = PopSim Consortium
license = ISC
description = tools for describing demographic models
url = https://github.com/grahamgower/demes
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = demes
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    attrs >= 19.1.0
    strictyaml
    setuptools >= 41.2  # For pkg_resources
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[mypy-strictyaml.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-msprime.*]
ignore_missing_imports = True

[mypy-stdpopsim.*]
ignore_missing_imports = True
