[metadata]
name = demes
author = PopSim Consortium
license = ISC
description = tools for describing demographic models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/popsim-consortium/demes-python
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = demes
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    attrs >= 20.3.0  # for attr.asdict(value_serializer=...)
    ruamel.yaml >= 0.15.78  # attempts to install earlier versions failed
setup_requires =
    setuptools
    setuptools_scm

[flake8]
extend-exclude = docs/_build
# black-compatible settings
max-line-length = 88
extend-ignore = E203, W503

[mypy]
files = demes, tests

[mypy-msprime.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-stdpopsim.*]
ignore_missing_imports = True

[tool.black]
target_version = py36

[tool:pytest]
addopts = -n auto
testpaths = tests
