[metadata]
name = demes
author = PopSim Consortium
license = ISC
description = tools for describing demographic models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/popsim-consortium/demes-python
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Documentation = https://popsim-consortium.github.io/demes-docs/
    Source Code = https://github.com/popsim-consortium/demes-python/
    Bug Tracker = https://github.com/popsim-consortium/demes-python/issues

[options]
packages = demes
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    attrs >= 20.3.0  # for attr.asdict(value_serializer=...)
    ruamel.yaml >= 0.15.78  # attempts to install earlier versions failed
setup_requires =
    setuptools
    setuptools_scm

[options.entry_points]
console_scripts =
    demes = demes.__main__:cli

[flake8]
extend-exclude = docs/_build
# black-compatible settings
max-line-length = 88
extend-ignore = E203, W503
# There's no way to ignore specific warnings in the files themselves.
# "flake8: noqa: F401" on its own line will just ignore all warnings.
per-file-ignores =
    tests/test_import_visibility.py:F403,F405

[mypy]
files = demes, tests
warn_unused_ignores = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[tool.black]
target_version = py36

[tool:pytest]
addopts = -n auto
testpaths = tests

[pylint.messages_control]
disable =
    chained-comparison,
    fixme,
    invalid-name,
    missing-docstring,
    missing-module-docstring,
    superfluous-parens,
    protected-access,
    too-few-public-methods,
    too-many-arguments,
    too-many-branches,
    too-many-instance-attributes,
    too-many-lines,
    too-many-locals,
    too-many-nested-blocks,
    too-many-statements,
    unspecified-encoding,
    unused-argument,
